--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.2.14",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
